<resources>
    <string name="app_name" translatable="false">Fretboard Game</string>
    <string name="permission">Permission</string>
    <string name="permission_record_audio">The app must be able to use the microphone.</string>
    <string name="choose">Choose the difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="ready">Ready</string>
    <string name="go">Go!</string>
    <string name="your_score">Your score is</string>

    <string name="username">Username</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_to_exit">Are you sure that you want to leave the game?</string>
    <string name="sure">Sure</string>

    <string name="standard_tuning_val" translatable="false">Standard</string>
    <string name="open_a_tuning_val" translatable="false">Open A</string>
    <string name="open_g_tuning_val" translatable="false">Open G</string>
    <string name="open_d_tuning_val" translatable="false">Open D</string>
    <string name="drop_d_tuning_val" translatable="false">Drop D</string>

    <string name="pref_tuning_key" translatable="false">pref_tuning</string>

    <string name="fa_times_circle" translatable="false">&#xf057;</string>
    <string name="fa_check_circle" translatable="false">&#xf058;</string>

<!--    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-2222134037229670/1560872766</string>-->
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
</resources>
